[gd_scene load_steps=17 format=3 uid="uid://c5ikc080spnru"]

[ext_resource type="Script" path="res://scripts/checkpoint.gd" id="1_0jqqy"]
[ext_resource type="Texture2D" uid="uid://c2a4qsdi5td4h" path="res://assets/tiles/maintiles.png" id="3_50y0o"]
[ext_resource type="Texture2D" uid="uid://dui6plyksjbng" path="res://shadersandresources/visibility_circle_simple.png" id="4_wrtm5"]
[ext_resource type="Texture2D" uid="uid://b1kwibels3jad" path="res://assets/particle.png" id="4_yvyhf"]
[ext_resource type="AudioStream" uid="uid://cl2unekqgs058" path="res://assets/sound/grave_rise.wav" id="5_qsjt4"]
[ext_resource type="AudioStream" uid="uid://0l0hlt5r83us" path="res://assets/sound/grave_settle.wav" id="6_2r127"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etmxo"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmwh4"]
size = Vector2(96, 66)

[sub_resource type="Curve" id="Curve_5djrc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.815642, 0.811639), 0.0, 0.0, 0, 0, Vector2(1, 0.101425), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_mvoqi"]
offsets = PackedFloat32Array(0.0166667, 0.566667)
colors = PackedColorArray(1, 1, 1, 1, 0.666667, 0.666667, 0.666667, 1)

[sub_resource type="Animation" id="Animation_up21q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}

[sub_resource type="Animation" id="Animation_gfxgg"]
resource_name = "claimed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_l4erc"]
resource_name = "rise"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 12), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.2, 0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_daj7b"]
_data = {
"RESET": SubResource("Animation_up21q"),
"claimed": SubResource("Animation_gfxgg"),
"rise": SubResource("Animation_l4erc")
}

[sub_resource type="Curve" id="Curve_dgmdh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.994413, 0.274347), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_wq48q"]
colors = PackedColorArray(0.666667, 0.666667, 0.666667, 1, 1, 1, 1, 1)

[node name="checkpoint" type="Area2D"]
script = ExtResource("1_0jqqy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_etmxo")

[node name="CameraShiftCollision" type="Area2D" parent="." groups=["override_camera"]]
position = Vector2(0, 24)
collision_layer = 32
collision_mask = 2

[node name="CameraShiftCollision" type="CollisionShape2D" parent="CameraShiftCollision"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_xmwh4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 12)
texture = ExtResource("3_50y0o")
region_enabled = true
region_rect = Rect2(64, 32, 15, 16)

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.666667, 0.666667, 0.666667, 1)
range_layer_min = -101
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("4_wrtm5")
texture_scale = 0.2

[node name="activation_particles" type="CPUParticles2D" parent="."]
position = Vector2(0, 8)
emitting = false
amount = 30
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, -1)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
damping_min = 10.0
damping_max = 10.0
scale_amount_max = 2.0
color = Color(0, 0, 0, 1)

[node name="settle_particles" type="CPUParticles2D" parent="."]
position = Vector2(0, 8)
emitting = false
amount = 50
one_shot = true
explosiveness = 0.6
texture = ExtResource("4_yvyhf")
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 20.0
damping_min = 10.0
damping_max = 10.0
scale_amount_min = 0.2
scale_amount_max = 0.9
scale_amount_curve = SubResource("Curve_5djrc")
color_ramp = SubResource("Gradient_mvoqi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_daj7b")
}

[node name="audio_rise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qsjt4")
volume_db = 5.0
max_distance = 200.0

[node name="audio_settle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2r127")
volume_db = 5.0
max_distance = 200.0

[node name="unclaimed_particles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 8)
emitting = false
texture = ExtResource("4_yvyhf")
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, -5)
initial_velocity_min = 1.0
initial_velocity_max = 5.0
scale_amount_curve = SubResource("Curve_dgmdh")
color_ramp = SubResource("Gradient_wq48q")

[node name="claimed_particles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 4)
emitting = false
texture = ExtResource("4_yvyhf")
direction = Vector2(0, -1)
gravity = Vector2(0, -5)
initial_velocity_min = 1.0
initial_velocity_max = 15.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_dgmdh")
color = Color(0, 0, 0, 1)
color_ramp = SubResource("Gradient_wq48q")
